User manage page done

--- a/App.config
+++ b/App.config
@@ -1,5 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="Inventory_App_Demo.Properties.Settings.tempdbConnectionString"
+            connectionString="Data Source=V-PC;Initial Catalog=tempdb;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+        <add name="Inventory_App_Demo.Properties.Settings.msdbConnectionString"
+            connectionString="Data Source=V-PC;Initial Catalog=msdb;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+        <add name="Inventory_App_Demo.Properties.Settings.InventoryConnectionString"
+            connectionString="Data Source=V-PC;Initial Catalog=Inventory;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
