--- a/Inventory App Demo.csproj
+++ b/Inventory App Demo.csproj
@@ -86,6 +86,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>tempdbDataSet.xsd</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="CustomerManagement.resx">
+      <DependentUpon>CustomerManagement.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
